# telesystem

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: README.md
src/: .env.example  Dockerfile  pyproject.toml
src/apps/telesystem/: admin.py  apps.py  views.py
src/apps/telesystem/migrations/: 0001_initial.py  0002_alter_phonenumber_number.py
src/apps/telesystem/static/css/: main_styles.css  sub_info.css
src/apps/telesystem/templates/: sub_delete.html  subscriber_information.html
src/settings/: settings.py  urls.py
src/src/: settings.py  urls.py
src/static/css/: sub_info.css
src/telesystem/: apps.py  forms.py  models.py  tests.py  views.py
src/telesystem/migrations/: 0001_initial.py
src/telesystem/static/css/: sub_add.css  sub_info.css
src/telesystem/templates/: index.html  number_add.html  sub_add.html  subscriber_information.html
src/telesystem/templates/accounts/: login.html
src/templates/: index.html  sub_change.html  subscriber_information.html
