[tool.poetry]
name = "telesystem_venv"
version = "0.1.0"
description = ""
authors = ["kurrbanov <justnick1312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
psycopg2 = "^2.9.1"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
